--- a/Covid 19 Statistic API.ipynb
+++ b/Covid 19 Statistic API.ipynb
@@ -1,6 +1,13 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Connected with rapidapi.com"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {
@@ -33,6 +40,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Show all keys**\n",
+        "\n",
+        "Karena Json berbentuk dictionary, jadi pertama akan dibuat list kosong untuk menampung value, kemudian menggunakan iterarion untuk mengambil setiap value dari setiap keys."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 4,
       "metadata": {
@@ -59,6 +75,13 @@
         "      k.append(data2)\n",
         "key=list(dict.fromkeys(k))\n",
         "print(key)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Create List From Json"
       ]
     },
     {
@@ -97,8 +120,24 @@
         "  last_update.append(data['last_update'])\n",
         "  active.append(data['active'])\n",
         "  active_diff.append(data['active_diff'])\n",
-        "  fatality_rate.append(data['fatality_rate'])\n",
+        "  fatality_rate.append(data['fatality_rate'])\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Mencetak isi list\n",
         "\n",
+        "Disini akan diperlihatkan apakah value sudah tersimpan dalam list dengan baik dan benar"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "print(date)"
       ]
     },
@@ -211,6 +250,25 @@
       "outputs": [],
       "source": [
         "print(fatality_rate)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Load Data Using Pandas"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "df = pd.DataFrame(data_json)\n",
+        "print(df)"
       ]
     }
   ],
