new pivot table

--- a/Covid 19 Statistic API.ipynb
+++ b/Covid 19 Statistic API.ipynb
@@ -9,7 +9,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "am-mVVUqqqUy"
       },
@@ -17,7 +17,9 @@
       "source": [
         "import json\n",
         "import csv\n",
-        "import requests"
+        "import requests\n",
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np"
       ]
     },
     {
@@ -50,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -86,7 +88,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -261,14 +263,171 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "         date  confirmed  deaths  recovered  confirmed_diff  deaths_diff  \\\n",
+            "0  2022-05-29     180174    7701          0              52            0   \n",
+            "1  2022-05-29     276101    3497          0              20            0   \n",
+            "2  2022-05-29     265873    6875          0               0            0   \n",
+            "3  2022-05-29      42894     153          0               0            0   \n",
+            "4  2022-05-29      99527    1900          0               0            0   \n",
+            "\n",
+            "   recovered_diff          last_update  active  active_diff  fatality_rate  \\\n",
+            "0               0  2022-05-30 04:20:50  172473           52         0.0427   \n",
+            "1               0  2022-05-30 04:20:50  272604           20         0.0127   \n",
+            "2               0  2022-05-30 04:20:50  258998            0         0.0259   \n",
+            "3               0  2022-05-30 04:20:50   42741            0         0.0036   \n",
+            "4               0  2022-05-30 04:20:50   97627            0         0.0191   \n",
+            "\n",
+            "                                              region  \n",
+            "0  {'iso': 'AFG', 'name': 'Afghanistan', 'provinc...  \n",
+            "1  {'iso': 'ALB', 'name': 'Albania', 'province': ...  \n",
+            "2  {'iso': 'DZA', 'name': 'Algeria', 'province': ...  \n",
+            "3  {'iso': 'AND', 'name': 'Andorra', 'province': ...  \n",
+            "4  {'iso': 'AGO', 'name': 'Angola', 'province': '...  \n"
+          ]
+        }
+      ],
       "source": [
         "import pandas as pd\n",
         "\n",
         "df = pd.DataFrame(data_json)\n",
-        "print(df)"
+        "print(df.head(5))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "nameCountry = list()\n",
+        "count = len(date)\n",
+        "for i in range (0, count):\n",
+        "    p = data_json[i]['region']['name']\n",
+        "    nameCountry.append(p)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "print(nameCountry)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th>confirmed</th>\n",
+              "      <th>deaths</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>date</th>\n",
+              "      <th>last_update</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th rowspan=\"6\" valign=\"top\">2022-05-29</th>\n",
+              "      <th>2020-08-04 02:27:56</th>\n",
+              "      <td>76.000000</td>\n",
+              "      <td>1.500000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2020-12-21 13:27:30</th>\n",
+              "      <td>6.500000</td>\n",
+              "      <td>0.500000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2021-11-10 23:21:44</th>\n",
+              "      <td>2235.500000</td>\n",
+              "      <td>2.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2022-02-28 23:21:00</th>\n",
+              "      <td>84139.000000</td>\n",
+              "      <td>21.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2022-03-01 23:21:04</th>\n",
+              "      <td>186685.851852</td>\n",
+              "      <td>4165.148148</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2022-05-30 04:20:50</th>\n",
+              "      <td>696631.561170</td>\n",
+              "      <td>8211.824468</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                                    confirmed       deaths\n",
+              "date       last_update                                    \n",
+              "2022-05-29 2020-08-04 02:27:56      76.000000     1.500000\n",
+              "           2020-12-21 13:27:30       6.500000     0.500000\n",
+              "           2021-11-10 23:21:44    2235.500000     2.000000\n",
+              "           2022-02-28 23:21:00   84139.000000    21.000000\n",
+              "           2022-03-01 23:21:04  186685.851852  4165.148148\n",
+              "           2022-05-30 04:20:50  696631.561170  8211.824468"
+            ]
+          },
+          "execution_count": 11,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df.pivot_table(index=[\"date\", \"last_update\"], values=[\"confirmed\", \"deaths\"])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Harusnya jadi heatmap tapi belom jadi\n",
+        "\n",
+        "import plotly.express as px\n",
+        "\n",
+        "lat_value = data_json\n",
+        "\n",
+        "fig = px.density_mapbox(df, lat)"
       ]
     }
   ],
